Updated Build Files and Readme. Ready for Release.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#PostgreSQL Setup
-spring.datasource.url=jdbc:postgresql://localhost:5432/backendtest
+#PostgreSQL Setup - Using host.docker.internal as IP for docker imagecd
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/backendtest
 spring.datasource.username=postgres
 spring.datasource.password=WR2WPMjrJUoB27
 
