--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,13 +11,13 @@ FROM tiangolo/node-frontend:10 as build-stage
 WORKDIR /frontend
 
 # Copy JSON packed for node module to docker image, first is local from docker file second is addr docker container
-COPY /frontend/package*.json /frontend/
+COPY package*.json /frontend/
 
 # Running npm install since we are in frontend folder in docker
 RUN npm install
 
 # Copy front end files to front end in docker
-COPY /frontend/ /frontend/
+COPY /. /frontend/
 
 # Building frontend application
 RUN npm run build
@@ -30,22 +30,3 @@ COPY --from=build-stage /frontend/build/ /usr/share/nginx/html
 
 # Copy the default nginx.conf provided by tiangolo/node-frontend
 COPY --from=build-stage /nginx.conf /etc/nginx/conf.d/default.conf
-
-### Stage 3: Build Spring Boot.
-# After you have created jar file with: gradle bootBuildImage
-# we would like to use openjdk:8-jdk-alpine for small size. -BUt since our spring boot are new we need a newer version.
-# The jar file wil be in /backend/build/libs/firstspingapp-0.0.1-SNAPSHOT.jar
-FROM openjdk:11.0.4-jre-slim
-
-#Creating tmp volum
-VOLUME /tmp
-
-#Creating app folder for backend
-RUN mkdir -p /backend/
-
-#Also log folder
-RUN mkdir -p /backend/logs/
-
-#Copyien the jar file
-COPY /backend/build/libs/firstspringapp-0.0.1-SNAPSHOT.jar /backend/app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=container", "-jar", "/backend/app.jar"]
